--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Inches to mm</h1>
-  
-  <form action="">
-    <input id="input" type="text" placeholder="Length in Inches">
-    Convert to:
-    <select id="unit">
-      <option value="Feet">Feet</option>
-      <option value="mm">mm</option>
-      <option value="cm">cm</option>
-    </select>
-    <button type="button" id="button">Calculate</button>
-  </form>
-  <div id="results"></div>
-  
-</body>
-<script>src="app.js"</script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="app.css" />
+    <title>Unit Converter</title>
+  </head>
+  <body>
+    <div class="container">
+    <h1>LENGTH CONVERTER</h1>
+
+    <!-- Form 1 -->
+    <div class="form">
+      <form class="form">
+        <select id="unit1" class="form">
+          <option value="mm">Millimeters</option>
+          <option value="cm">Centimeters</option>
+          <option value="ft">Feet</option>
+        </select><input id="input" type="text" class="form" />
+
+        <p>Convert to:</p>
+
+        <!-- Form 2 -->
+        <select id="unit" class="form">
+          <option value="mm">Millimeters</option>
+          <option value="cm">Centimeters</option>
+          <option value="ft">Feet</option>
+        </select>
+      </form>
+
+
+      <button type="button" class="form" id="button" onclick="calc()">
+        Click to Convert
+      </button>
+      <div id="results" class="form"></div>
+    </div>
+  </div>
+  </body>
+  <script src="app.js"></script>
 </html>
