--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
           <option value="mm">Millimeters</option>
           <option value="cm">Centimeters</option>
           <option value="ft">Feet</option>
-        </select><input id="input" type="text" class="form" />
+        </select><input id="input" type="text" placeholder="Enter Value" class="form" />
 
         <p>Convert to:</p>
 
         <!-- Form 2 -->
         <select id="unit" class="form">
+          <option value="ft">Feet</option>
           <option value="mm">Millimeters</option>
           <option value="cm">Centimeters</option>
-          <option value="ft">Feet</option>
+          
         </select>
       </form>
 
