--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             id="input"
             type="text"
             class="form"
-            placeholder="Enter Length"
+            placeholder="Enter Length" required="number" onclick="refreshDiv()" 
           />
 
           <p>Convert to:</p>
