--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
             <option value="mm">Millimeters</option>
             <option value="cm">Centimeters</option>
             <option value="ft">Feet</option>
+            <option value="mtr">Meters</option>
+            <option value="inches">Inches</option>
           </select>
           <!-- Input Field-->
-          <input
-            id="input"
-            type="text"
-            class="form"
-            placeholder="Enter Length"
-          />
+          <input id="input" type="text" class="form" placeholder="Enter Length" onclick="refreshDiv()"/>
 
           <p>Convert to:</p>
 
@@ -34,6 +31,8 @@
             <option value="mm">Millimeters</option>
             <option value="cm">Centimeters</option>
             <option value="ft">Feet</option>
+            <option value="mtr">Meters</option>
+            <option value="inches">Inches</option>
           </select>
         </form>
 
